# kinect_stack2

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: kinect_dashboard.rviz
include/kinect_stack2/: kinect_component.hpp
launch/: kinect.launch.py
src/: kinect_component.cpp
